# agent-playground

./: .env.example  .gitignore  README.md  pyproject.toml
fit-check-agent/: .env.example  README.md  install-native-host.sh  native-host.sh  pyproject.toml
fit-check-agent/src/fit_check_agent/: __init__.py  __main__.py  cli.py  config.py  context_cleaner.py  images.py  native_host.py  pipeline.py  profiles.py  prompt.py
fit-check-agent/tests/: test_context_cleaner.py  test_images.py  test_native_host.py  test_profiles.py  test_prompt.py
fit-check-extension/: README.md  manifest.json  popup.css  popup.html  popup.js
hn-job-agent/: .env.example  README.md  pyproject.toml  run.sh
hn-job-agent/src/hn_job_agent/: __main__.py  classifier.py  config.py  hn.py  pipeline.py  state.py
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  chatgpt_web.py  fx.py  openrouter.py  telegram.py
