[project]
name = "projects-workspace"
version = "0.1.0"
description = "Playground for agents — shared deps, venv, and LLM keys live here; per-agent code in dedicated folders."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "shared",
    "hn-job-agent",
]

[tool.uv.workspace]
members = ["shared", "hn-job-agent"]

[tool.uv.sources]
shared = { workspace = true }
hn-job-agent = { workspace = true }
