[project]
name = "fit-check-agent"
version = "0.1.0"
description = "Native Messaging host that sends fashion product context and local profile bundles to ChatGPT web."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "shared",
]

[project.scripts]
fit-check = "fit_check_agent.cli:main"
fit-check-native-host = "fit_check_agent.native_host:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fit_check_agent"]
