[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for agents in this workspace (Telegram, FX, OpenRouter)."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "tenacity>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
